# rust-lsp-proxy

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml  rust_ci.yml
docs/: ARCHITECTURE.md
src/: code.rs  config.rs  file_sync.rs  file_sync_err.rs  file_sync_msg.rs  files.rs  lang_server.rs  lib.rs  lsp_intercept.rs  main.rs
src/file_system/: file_sync.rs  file_sync_command.rs  file_sync_msg.rs  files.rs  mod.rs
src/language_server/: intercept.rs  mod.rs  server.rs  server_runners.rs
src/program/: code_runner.rs  mod.rs  runners.rs  user_program.rs
tests/: code.rs  files.rs  health.rs  lang_server.rs
tests/example_code_repos/test-java-repo/src/: Hello.java  Person.java
tests/integration/: code.rs  files.rs  health.rs  main.rs  test_helper.rs
tests/integration/test_helper/: mod.rs
tests/test_helper/: mod.rs
