[package]
name = "lsp_proxy"
version = "0.2.0"
authors = ["Ayomide Bamidele <ayoeze@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
path = "src/bin/main.rs"
name = "lsp_proxy"

[dependencies]
actix-web = "3"
tempfile = "3"
structopt = "0.3.17"
clap = "2.33.3"
actix-files = "0.5.0"
mime = "0.3.16"
env_logger = "0.8.2"
tokio = { version = "0.2.22", features = ["process", "rt-core", "fs"] }
actix = "0.10.0"
actix-web-actors = "3.0.0"
serde_json = "1.0.60"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"
derive_more = "0.99"
lsp-types = "0.86.0"
dotenv = "0.15.0"
[dev-dependencies]
actix-rt = "1"
reqwest = { version = "0.10.10", features = ["json"] }
tokio = "0.2.22"
websocket = "0.26.2"
claim = "0.5.0"
assert-json-diff = "2.0.0"
